# CompetitiveProgramming

./: .gitignore  1201C.cpp  1777C.cpp  1833E.cpp  1869A.cpp  1931E.cpp  2091E.cpp  2117E.cpp  2118A.cpp  2119A.cpp  2120B.cpp  21230A.cpp  2123C.cpp  2123D.cpp  2123E.cpp  2123F.cpp  702C.cpp  Building_Roads.cpp  CMakeLists.txt  CMakeUserPresets.json  C_GCD_on_Blackboard.cpp  Forest_Queries.cpp  Prime.cpp  Problem_3_Painting_the_Barn.cpp  Project_Euler_29_Distinct_powers.cpp  Project_Euler_2_Even_Fibonacci_numbers.cpp  Subarray_Divisibility.cpp  Sum_of_Three_Values.cpp  birthday.cpp  vcpkg-configuration.json  vcpkg.json
AOC/2024/Eight/: EightPt2.java
CP4/: 1341  1341.cpp  input.txt  output.txt
Clean/: 104114N.cpp  1461C.cpp  1826D.cpp  1919C.cpp  2091D.cpp  2091E.cpp  2091F.cpp  2119B.cpp  2120A.cpp  2123B.cpp  814C.cpp  D_Multiple_of_2019.cpp  Prime.cpp  Problem_3_Painting_the_Barn.cpp  Project_Euler_29_Distinct_powers.cpp  Subarray_Sums_II.cpp  Sum_of_Four_Values.cpp  duplicate.py
Code/CP4/: 1341  1341.cpp  output.txt
Code/NeetCode/: ContainsDuplicate.cpp  MinimumIntervalToIncludeEachQuery.cpp
CodeForces/Practice/: 2047A.cpp  2047B.cpp  2047C.cpp  ExpensiveNumber.cpp  FlowerBoy.cpp  IdealGenerator.cpp  LadyBug.cpp  OlympiadDate.cpp  SliceToSurvive.cpp  SuperultrasFavoritePermutation.cpp  Tester.cpp
HackerRank/: Project_Euler_2_Even_Fibonacci_numbers.cpp
HackerRank/ProjectEuler/: 10.cpp
NeetCode/: ContainsDuplicate.cpp  ValidAnagram.cpp
Template/: Algos.cpp  Benchmark.cpp  Template.cpp  USACO.cpp
Utils/: Performance.cpp  graph.py
(+68 files in other folders)
